Version 2.3-0

 o Interpolating splines are now used by default when drawing lines in effects plots unless the argument use.splines=FALSE
 
 o effect() now calls Effect(); all effect() methods are removed.

Version 2.2-6

 o bug fixes in effects.mer and effects.lme.

 o added terms.gls() to make effect.gls() and Effect.gls() work again.

 o plot.eff() gains an lwd= option to control the width of fitted lines.
 
 o Added ci.style='bands' and alpha= to plot.eff() for non-multiline plots to give filled confidence bands.

Version 2.2-5

 o Added support for polytomous latent class analysis based on the poLCA package.
 
 o Modified mixed-model methods to all use in user-functions.

 o Changed the default method for determining number of levels for a continuous predictor; see help page for 'effect' and discussion of the 'xlevels' argument for details.  Argument 'default.levels', while still included for compatibility, is depricated.
                                                                                                
 o Added .merMod methods for development version of lme4.

 o Added support for lme4.0.

 o Fixed bug preventing restoration of warn option (reported by Kenneth Knoblauch).

 o Fixed handling of ticks.x argument to plot.eff() and plot.effpoly(), now works as advertized.

 o Adjusted package dependencies, imports for CRAN checks.

 o Changed name of Titanic dataset to TitanicSurvival to avoid name clash (request of Michael Friendly).

 o Minor fixes.

Version 2.2-4

 o Add argument 'ci.style' to plot.eff() and plot.eff() to allow confidence intervals to be displayed as lines or using error bars.  Confidence bars are permitted on multiline plots (after suggestion by Steve Taylor).

 o Allow empty cells with crossed factors for lm, glm and multinom.

 o Added warning about logical predictors (suggestion of Kazuki Yoshida).

Version 2.2-3

 o Fixed bugs in axis scaling and xlim specification (reported by Achim Zeileis).
